# pycra-tools

./: .gitignore  LICENSE  README.md  example.py  graspy.py  graspy_readgrd.py  pyproject.toml  structure.txt
.github/workflows/: deploy.yml
ebook/: example_coupling.ipynb  example_fields.ipynb  grasp_coupling_data.ipynb  grasp_field_data.ipynb  grasp_field_data.md  installation.md  intro.md  myst.yml  references.bib
example_data/fields/: test.py
examples/: README.md
examples/coupling/: coupling_and_plate.py
examples/coupling/coupling_and_plate/Job_01/: Job_01.out  Job_01.tci  Job_01.tor  coupling_system_horn0_trivial.cut  coupling_system_horn1.cut  coupling_system_horn2.cut  output_files_182457.xml  po_rectangular_plate_spill_over_data_faces.fmt  screenoutput.txt
examples/fields/: offset_reflector.py
examples/fields/offset_reflector/Job_01/: Job_01.out  Job_01.tci  Job_01.tor  output_files_202085.xml  screenoutput.txt  single_po_spill_over_data_faces.fmt  spherical_cut_farfield_E.cut  spherical_cut_nearfield_E.cut  spherical_cut_nearfield_H.cut
src/graspy/: __init__.py  graspy.py
src/pycra/: __init__.py  _version.py  cutfile.py  gridfile.py  labels.py  torfile.py  typecheck.py  utils.py
src/pycra/coupling/: cutfile.py
src/pycra/fields/: cutfile.py  gridfile.py  gridfile_grdutils.py  gridfile_h5utils.py  labels.py
src/pycra_tools/coupling/: cutfile.py
src/pycra_tools/fields/: cutfile.py  gridfile.py  gridfile_grdutils.py  gridfile_h5utils.py
