# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "pycra"
description = "Package to read Ticra Tools field and coupling data stored in .cut, .grd and .h5 file formats"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "roland.albers@unibe.ch", name = "Roland Albers" },
    { email = "philipp.schmid@unibe.ch", name = "Philipp J. Schmid"},
]
dynamic = ["version"]
dependencies = ["xarray","matplotlib","numpy","PyQt5"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/pycra/_version.py"

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://git.iap.unibe.ch/albers/pycra"
repository = "https://git.iap.unibe.ch/albers/pycra"
