# General information about pyproject.toml
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# Information about versioning
# https://hatch.pypa.io/1.9/version/
# Major.Minor.Patch (e.g. 3.1.7)
# Major = fundamental modifications (not necessarily backward-compatible)
# Minor = backward-compatible new features
# Patch = backward-compatible bug fixes

# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "pycra-tools"
description = "Package to read Ticra Tools field and coupling data stored in .cut, .grd and .h5 file formats"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = { file = "LICENSE"}
authors = [
    {name = "Roland Albers", email = "roland.albers@unibe.ch"},
    {name = "Philipp J. Schmid", email = "philipp.schmid@unibe.ch"},
]
maintainers = [
    {name = "Philipp J. Schmid", email = "philipp.schmid@unibe.ch"},
    {name = "Roland Albers", email = "roland.albers@unibe.ch"},
]
dynamic = ["version"]
dependencies = ["numpy","xarray","pint","h5py"]
keywords = ["TICRA", "GRASP", "quasioptics", "simulation", "reflector", "antenna", "processing"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/pycra_tools/_version.py"

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
repository = "https://github.com/iap-unibe-ch/pycra-tools.git"
